--- a/BlazorBlog/BlazorBlog/Layout/NavMenu.razor
+++ b/BlazorBlog/BlazorBlog/Layout/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<MudNavMenu>
     <MudNavLink Href="/" Match="NavLinkMatch.All">Home</MudNavLink>
-    <MudNavLink Href="/counter" Match="NavLinkMatch.Prefix">Counter</MudNavLink>
-    <MudNavLink Href="/Weather"  Match="NavLinkMatch.Prefix">About</MudNavLink>
+    <MudNavLink Href="/counter">Counter</MudNavLink>
+    <MudNavLink Href="/weather">About</MudNavLink>
 </MudNavMenu>
